paragraphes + chgt de place des images +divers

--- a/_posts/2012-04-11-jenkins_fr.textile
+++ b/_posts/2012-04-11-jenkins_fr.textile
@@ -62,7 +62,7 @@ p. Lancez jenkins depuis la ligne de commande (depuis le répertoire de jenkins)
 @java.exe -jar jenkins.war@
 Attendre le lancement et dans le navigateur chargez la page "http://localhost:8080/":http://localhost:8080/
 
-p=. !../images/Jenkins_01_ecran_principal.png(Ecran principal de Jenkins avec 2 projets configurés)!
+p=. !../images/article_jenkins/Jenkins_01_ecran_principal.png(Ecran principal de Jenkins avec 2 projets configurés)!
 
 p=. _Ecran principal de Jenkins avec 2 projets configurés_
 
@@ -112,15 +112,20 @@ Dans le paragraphe “Ce qui déclenche le build”, sélectionnez “Scruter l'
 h4. Compilation des sources
 
 Dans le paragraphe “Build”, cliquez sur le bouton “Ajouter une étape au Build” et selectionnez “Build a VisualStudio projet or solution using MSBuild”
+
 Dans “MsBuild Version”, vous devez retrouver la ligne correspondant à la configuration que vous avez effectuée à l'étape "§2.2.2.1. Configuration des outils .Net". Sélectionnez là.
+
 Dans “MsBuild Build File”, indiquez le chemin (en relatif) du fichier .sln de votre projet.
+
 Dans “Command Line Arguments”, indiquez les paramètres de msbuild. Souvent, le seul paramètre nécessaire permet d’indiquer la configuration à compiler par le paramètre “/p:Configuration=DEBUG”.
+
 Il peut cependant être nécessaire de reconstruire entièrement le projet (dans notre cas pour obtenir tous les warnings lors de la compilation pour utiliser par la suite le plugin “warnings” mais qui à pour contrepartie d’augmenter le temps de build), ce qui peut se faire en ajoutant le paramètre “/t:Clean;Build”.
 
 A ce stade, vous pouvez lancer un build et vérifier que votre projet est bien rapatrié du dépôt Git et compile. Pour cela, n’oubliez pas de sauver la configuration puis cliquez sur "Lancer un build":http://localhost:8080/job/JenkinsTest/build?delay=0sec .
+
 Si le build ne marche pas ou que le résultat attendu n’est pas le bon, vous pouvez maintenant et tout au long de la configuration des différentes  étapes voir les logs de déroulement de chaque build en affichant la page “Sortie Console” du build souhaité.
 
-p=. !../images/Jenkins_07_resultat_compilation.png(Ecran de résultat d'un build avec l'ensemble des métriques disponibles)!
+p=. !../images/article_jenkins/Jenkins_07_resultat_compilation.png(Ecran de résultat d'un build avec l'ensemble des métriques disponibles)!
 
 p=. _Ecran de résultat d'un build avec l'ensemble des métriques disponibles_
 
@@ -150,7 +155,7 @@ A ce stade, vous pouvez lancer un build et vérifier que les tests sont bien exe
 
 L’execution de 2 builds avec des résultats fait ainsi apparaitre un graphe représentant l’évolution du nombre de tests en échec sur le projet.
 
-p=. !../images/Jenkins_08_resultat_tests.png(Résultats des tests untaires des différents builds)!
+p=. !../images/article_jenkins/Jenkins_08_resultat_tests.png(Résultats des tests untaires des différents builds)!
 
 p=. _Résultats des tests untaires des différents builds_
 
@@ -158,8 +163,11 @@ p=. _Résultats des tests untaires des différents builds_
 h4. Mesure de la couverture de code
 
 Nous allons maintenant configurer la couverture de code qui permet de visualiser les parties du code de l'application couvertes ou non par les tests unitaires.
+
 Pour cela, nous allons utiliser l’outil "opencover":https://github.com/sawilde/opencover/downloads et l’outil de génération de rapport "ReportGenerator":http://reportgenerator.codeplex.com/ . Les télécharger, les installer et mettre les exécutables dans le PATH.
+
 Pour générer la couverture de code, nous allons modifier le script écrit précédement de façon à appeler les tests unitaires depuis l’outil de couverture de code.
+
 Une ligne de commande utilisant opencover doit être de la forme :
 
 bc. OpenCover.Console.exe -register:user -target:"<strong>Chemin absolu vers l’executable de test</strong>" -targetargs:"<strong>arguments de l’executable passés précédement</strong>" -filter:+[<strong>MonProjet</strong>.*]* -output:"coverage_report.xml"
@@ -187,7 +195,7 @@ Sauvez et executez un build pour obtenir des résultats.
 
 Un nouveau lien “Couverture de code” apparaît sur la page du projet nous permettant de consulter le rapport généré.
 
-p=. !../images/Jenkins_09_couverture.png(Résultats de la couverture de code)!
+p=. !../images/article_jenkins/Jenkins_09_couverture.png(Résultats de la couverture de code)!
 
 p=. _Résultats de la couverture de code_
 
@@ -214,8 +222,11 @@ Nous allons ici adresser les thèmes suivants :
 h4. La Complexité ciclomatique : CCM
 
 C’est un indicateur permettant de connaître la complexité du code écrit. Pour une méthode donnée, la complexité exprime le nombre de chemins différents pour parcourir l'ensemble du code. Plus le nombre est élevé, plus la méthode est difficilement testable et maintenable. Il est alors utile de la refactoriser.
+
 Pour cela, on peut utiliser CCM, un outil qu’on trouvera ici : "http://www.blunck.se/ccm.html":http://www.blunck.se/ccm.html 
+
 A installer, ainsi que le plugin “CCM plugin” proposé dans Jenkins.
+
 Aller dans “Administrer Jenkins” puis "Configurer le système":http://localhost:8080/configure  puis dans le paragraphe “CCM”, indiquez le chemin de l’executable (par ex : C:\Program Files (x86)\ccm\bin\CCM.exe)
 
 “Ajoutez une étape au Build” du type “Invoke CCM” et spécifiez dans “Project Source Folders” la liste des projet C# à analyser (en allant à la ligne après chaque chemin indiqué). Par exemple :
@@ -224,7 +235,7 @@ Aller dans “Administrer Jenkins” puis "Configurer le système":http://localh
 
 Sauvez, buildez et contemplez les résultats :)
 
-p=. !../images/metrique_01_CCM.png(Suivi de la complexité du code pour les différents builds)!
+p=. !../images/article_jenkins/metrique_01_CCM.png(Suivi de la complexité du code pour les différents builds)!
 
 p=. _Suivi de la complexité du code pour les différents builds_
 
@@ -232,21 +243,24 @@ p=. _Suivi de la complexité du code pour les différents builds_
 h4. Métriques de qualité du code source : "Violations":https://wiki.jenkins-ci.org/display/JENKINS/Violations 
 
 Tout d'abord, nous allons installer les outils suivants :
-Installation de gendarme ( "http://mono-project.com/Gendarme":http://mono-project.com/Gendarme  )
-Installation de Simian ( "http://www.harukizaemon.com/simian/index.html":http://www.harukizaemon.com/simian/index.html  )
-Installation FxCop depuis “C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\FXCop\FxCopSetup.exe” (FxCop est fourni dans le sdk 7.0 ou 7.1)
-Installation de StyleCop ( "http://stylecop.codeplex.com/":http://stylecop.codeplex.com/  )
+* Gendarme ( "http://mono-project.com/Gendarme":http://mono-project.com/Gendarme )
+* Simian ( "http://www.harukizaemon.com/simian/index.html":http://www.harukizaemon.com/simian/index.html  )
+* FxCop depuis “C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\FXCop\FxCopSetup.exe” (FxCop est fourni dans le sdk 7.0 ou 7.1)
+* StyleCop ( "http://stylecop.codeplex.com/":http://stylecop.codeplex.com/  )
 
 Ne pas oublier de mettre les outils dans le path du système...
+
 Pour utiliser ce plugin, il faut ajouter une étape supplémentaire dans le projet de build pour pouvoir générer les métriques souhaitées (au format xml, seul pris en compte par le plugin).
+
 Pour cela, cliquez sur le bouton “Ajouter une étape au build”, puis choisissez “Executer une ligne de commande batch Windows”.
+
 Nous allons ajouter une ligne de commande pour chaque outil utilisé.
 
 h5. Gendarme
 
 Gendarme est un outil d’analyse d’assembly. Pour cela, nous devons spécifier le chemin des assemblys que nous souhaitons analyser. Nous lui indiquons également de générer un fichier xml et lui indiquons le nom du fichier résultat.
 
-@ gendarme --xml gendarme_report.xml <strong>.\Chemin\Vers\Mon\Assembly\Mon.Assembly.exe</strong> <strong>.\Chemin\Vers\Mon\Assembly\Mon.Assembly2.dll</strong> @
+@gendarme --xml gendarme_report.xml <strong>.\Chemin\Vers\Mon\Assembly\Mon.Assembly.exe</strong> <strong>.\Chemin\Vers\Mon\Assembly\Mon.Assembly2.dll</strong> @
 
 Note: Gendarme nécessite la présence des fichiers pdb dans le répertoire du fichier assembly analysé.
 
@@ -254,34 +268,40 @@ h5. Simian
 
 Simian est un outil d’analyse de code source à la recherche de code dupliqué. Pour cela, nous devons spécifier le pattern des fichiers à analyser (et également si besoin celui des fichiers à exclure). Nous lui indiquons également de générer un fichier xml et lui indiquons le nom du fichier résultat.
 
-@ simian **/*.cs -formatter=xml:simian-output.xml -excludes=**/*.xaml.cs @
+@simian **/*.cs -formatter=xml:simian-output.xml -excludes=**/*.xaml.cs@
 
 Note: Le pattern **/*.cs indique qu’il faut analyser tous les fichier .cs se trouvant dans tous les sous-répertoires
 
 h5. FxCop
 
 FxCop est un outil d’analyse des fichier assembly.
+
 Comme gendarme, il faut lui indiquer les fichiers assembly à analyser (paramètre “/file:”).
+
 FxCop fonctionne grâce à des fichiers de règles que l’on peut utiliser au choix (paramètres “/rule:”) et dont la liste est disponible dans le sous-répertoire “rules” du dossier d’installation de FxCop. Dans l’exemple ci-dessous, toutes les règles sont utilisées.
+
 Il convient également de lui indiquer le fichier de sortie (paramètre “/out:”)
 
-@ fxcopcmd /file:"<strong>%WORKSPACE%\Chemin\Vers\Mon\Assembly\MonProjet.*.*</strong>" /directory:"<strong>%WORKSPACE%\Chemin\Vers\Mon\Assembly</strong>"  /directory:"C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0" /rule:UsageRules.dll /rule:DesignRules.dll /rule:GlobalizationRules.dll /rule:InteroperabilityRules.dll /rule:MobilityRules.dll /rule:NamingRules.dll /rule:PerformanceRules.dll /rule:PortabilityRules.dll /rule:SecurityRules.dll /out:fxcop-result.xml @
+@fxcopcmd /file:"<strong>%WORKSPACE%\Chemin\Vers\Mon\Assembly\MonProjet.*.*</strong>" /directory:"<strong>%WORKSPACE%\Chemin\Vers\Mon\Assembly</strong>"  /directory:"C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0" /rule:UsageRules.dll /rule:DesignRules.dll /rule:GlobalizationRules.dll /rule:InteroperabilityRules.dll /rule:MobilityRules.dll /rule:NamingRules.dll /rule:PerformanceRules.dll /rule:PortabilityRules.dll /rule:SecurityRules.dll /out:fxcop-result.xml @
 
 Note: Pour des raisons inconnues, il faut également indiquer à FxCop le répertoire (paramètre “/directory:”) du fichier “System.Core.dll” soit, dans notre cas, et en fonction su système et du framework “C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0”. Il est également conseillé de lui indiquer le répertoire des assemblys à tester
 
 h5. StyleCop
 
 StyleCop est fourni à travers un ensemble de dlls et s’intègre au sein de VisualStudio. Pour pouvoir l’utiliser en ligne de commande, on utilisera l’outil “StyleCop CLI” ("http://stylecopcli.sourceforge.net/":http://stylecopcli.sourceforge.net/ ).
+
 StyleCop fonctionne à partir d’un fichier de règles qu’il est préférable d’adapter à son besoin. Il est disponible dans le répertoire d’installation de StyleCop : “Settings.StyleCop”.
-La configuration se fait avec l’outil “StyleCopSettingsEditor.exe” en passant le fichier de configuration en paramètre de l’application. Une fois configuré selon vos besoins, placez le fichier dans le répertoire de travail de Jenkins ( qui correspond à JENKINS_HOME\jobs\MonJob\Workspace avec JENKINS_HOME au répertoire de jenkins --cf valeur dans "Administrer Jenkins":http://localhost:8080/manage  -&gt; "Informations sur le système":http://localhost:8080/systemInfo  -&gt;”JENKINS_HOME”-- et MonJob au nom du job de build créé dans Jenkins). Si le fichier n’est pas positionné dans ce répertoire, lui indiquer le chemin complet.
+
+La configuration se fait avec l’outil “StyleCopSettingsEditor.exe” en passant le fichier de configuration en paramètre de l’application. Une fois configuré selon vos besoins, placez le fichier dans le répertoire de travail de Jenkins ( qui correspond à JENKINS_HOME\jobs\MonJob\Workspace avec JENKINS_HOME au répertoire de jenkins ---cf valeur dans "Administrer Jenkins":http://localhost:8080/manage  -&gt; "Informations sur le système":http://localhost:8080/systemInfo  -&gt;”JENKINS_HOME”--- et MonJob au nom du job de build créé dans Jenkins). Si le fichier n’est pas positionné dans ce répertoire, lui indiquer le chemin complet.
 
 On peut maintenant ajouter la ligne de commande suivante au script où on indique le chemin vers le fichier de la Solution, le nom du fichier de résultat à générer et le fichier de paramètre à utiliser :
-@ StyleCopCLI -sln <strong>%WORKSPACE%\Solution\MaSolution.sln</strong> -out StyleCopResults.xml -set Settings.StyleCop @
+@StyleCopCLI -sln <strong>%WORKSPACE%\Solution\MaSolution.sln</strong> -out StyleCopResults.xml -set Settings.StyleCop@
 
 
 Enfin, le batch doit se terminer par “exit 0” pour que le build n’échoue pas si un des outils renvoie un code non satisfaisant.
 
 Notre batch ressemble donc à cela :
+
 bc. REM Analyse statistique
 gendarme --xml gendarme_report.xml <strong>.\Chemin\Vers\Mon\Assembly\Mon.Assembly.exe .\Chemin\Vers\Mon\Assembly\Mon.Assembly2.dll</strong>
 simian **/*.cs -formatter=xml:simian-output.xml -excludes=**/*.xaml.cs
@@ -290,27 +310,27 @@ StyleCopCLI -sln <strong>%WORKSPACE%\Solution\MaSolution.sln</strong> -out Style
 exit 0
 REM Fin Analyse statistique
 
-
 Il reste à configurer le plugin de façon à prendre en compte les fichiers générés lors de cette étape du build. Pour cela, il faut cocher l’option “Report Violations” et renseigner pour chaque ligne correspondante à l’outil utilisé (Gendarme, Simian, FxCop, StyleCop), le nom du fichier de résultat généré ainsi que ajuster (ou pas) selon vos besoins les 3 chiffres correspondants aux valeurs limites indiquant un build bon/de qualité médiocre/instable!
 
 Le plugin est configuré et un graphe regroupant les diverses métriques devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Violations” est également disponible dans la colonne de gauche.
 
-p=. !../images/Jenkins_10_metriques_violation.png(Graphe de suivi des métriques d'analyse de code)!
+p=. !../images/article_jenkins/Jenkins_10_metriques_violation.png(Graphe de suivi des métriques d'analyse de code)!
 
 p=. _Graphe de suivi des métriques d'analyse de code_
-
 
 h4. Détection de tàches à faire : Task Scanner Plugin
 
 Ce plugin permet de détecter des chaines de caractères types (FIXME, TODO,... dans les commentaires et de suivre leur évolution.
+
 Après l’avoir installé, allez dans la configuration du projet et activez la case à cocher “Recherche des tâches ouvertes dans le workspace”.
+
 Puis configurez les options suivantes :
 “Files to scan” = **/*.cs
 “Tasks tags” = configuer les 3 champs de priorités avec les chaines de caractère que vous souhaitez.
 
 Le plugin est configuré et un graphe “Open Tasks Trend” devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Tâches ouvertes” est également disponible dans la colonne de gauche.
 
-p=. !../images/metrique_02_OpenTasks.png(Suivi des tâches laissées ouverte dans le code source)!
+p=. !../images/article_jenkins/metrique_02_OpenTasks.png(Suivi des tâches laissées ouverte dans le code source)!
 
 p=. _Suivi des tâches laissées ouverte dans le code source_
 
@@ -318,12 +338,16 @@ p=. _Suivi des tâches laissées ouverte dans le code source_
 h4. Détection des similarités de code : Simian / Dry Plugin
 
 Ce plugin permet une autre visualisation intéressante de l’analyse de la duplication de lignes de codes (donné par l’outil simian).
+
 Le plugin utilise le même fichier de résultat obtenu par la commande définie plus tôt lors de l’utilisation du plugin “Violation”.
+
 Dans la configuration du projet et activez la case à cocher “Publish duplicate code analysis results”.
+
 Puis configurez l’option “Duplicate code results” par le nom du fichier xml de résultat (pour nous : simian-output.xml )
+
 Le plugin est maintenant configuré et, comme le plugin “Task Scanner Plugin”, un graphe “Duplicate Code Trend” devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Duplicate Code” est également disponible dans la colonne de gauche pour parcourir les résultats...
 
-p=. !../images/metrique_06_Similarités.png(Affichage des similarités, ou code dupliqué, dans le dernier build)!
+p=. !../images/article_jenkins/metrique_06_Similarités.png(Affichage des similarités, ou code dupliqué, dans le dernier build)!
 
 p=. _Affichage des similarités, ou code dupliqué, dans le dernier build_
 
@@ -334,7 +358,7 @@ Ce plugin permet l’affichage, la comptabilisation et le suivi des warnings lor
 Dans la configuration du projet et activez la case à cocher “Scan for compiler warnings” et cliquez sur le bouton “ajouter” à côté du texte “Scan console log” et sélectionnez le parser “MSBuild”.
 Le plugin est maintenant configuré et, comme le plugin “Task Scanner Plugin”, un graphe “Compiler Warnings Trend” devrait être disponible dans le tableau de bord du projet lors du prochain build. Un lien “Compiler Warnings” est également disponible dans la colonne de gauche pour parcourir les résultats..
 
-p=. !../images/metrique_03_Warnings.png(Suivi des Warnings de compilation)!
+p=. !../images/article_jenkins/metrique_03_Warnings.png(Suivi des Warnings de compilation)!
 
 p=. _Suivi des Warnings de compilation_
 
@@ -346,7 +370,9 @@ Il existe des plugins qui peuvent encourager votre équipe à venir consulter et
 h4. ThinBackup
 
 Ce plugin permet de faire des sauvegardes et restaurations des configurations des différents jobs créés.
+
 Installez le plugin, redemarrez Jenkins et allez dans "Administrer Jenkins":http://localhost:8080/manage , ”"ThinBackup":http://localhost:8080/thinBackup ” et ”Settings”. Configurez le “Backup directory” avec le répertoire de votre choix.
+
 Vous pouvez maintenant sauvegarde et restaurer vis configurations.
 
 h3. Installation facile et rapide : Bonus exceptionnel!!!!! ;)
@@ -366,17 +392,24 @@ Pour cela, il faut installer préalablement TOUS les plugins utilisés dans la c
 
 Configurer les plugins le necessitant (git, msbuild, ccm) dans "Administrer Jenkins":http://localhost:8080/manage , ”"Configurer le système":http://localhost:8080/configure ”. Cette configuration a été décrite précédement.
 
-Décompressez maintenant "cette archive":../images/FULL-2012-04-09_23-48.zip  dans le répertoire utilisé par ThinBackup.
+Décompressez maintenant "cette archive":../files/article_jenkins/FULL-2012-04-09_23-48.zip  dans le répertoire utilisé par ThinBackup.
+
 Allez dans "Administrer Jenkins":http://localhost:8080/manage , "ThinBackup":http://localhost:8080/thinBackup, "Restore":http://localhost:8080/thinBackup/restoreOptions  et restaurez le backup correspondant.
+
 Puis dans "Administrer Jenkins":http://localhost:8080/manage , "Recharger la configuration à partir du disque":http://localhost:8080/reload .
+
 Vous devez maintenant avoir un job fonctionnel pré-configuré avec toutes les étapes du build. Il ne reste plus qu’à adapter les chemins et noms à vos besoins :D
+
 Vous pouvez également supprimer ce dont vous ne voulez pas...
+
 Note: si vous avez oublié un plugin, vous pouvez le rajouter par la suite et relancer la restauration si besoin.
 
 Nous avons maintenant créé un job avec Jenkins pour gérer l’intégration de notre projet de développement. Ce job étant relativement complet, il peut prendre un certain temps et toutes les métriques ne sont pas forcement nécessaires à chaque build. Il peut donc être utile de construire un build plus léger (avec seulement les tests unitaires et la couverture de code).
+
 On peut donc toujours créer un ou plusieurs nouveaux jobs en copiant le job précédement créé et en supprimant les étapes non souhaitées.
 
 h1. Conclusion
 
 Au cours de cet article, nous avons installé et configuré Jenkins pour mettre en oeuvre facilement une usine logicielle pour pouvoir construire et analyser un projet .Net. Nous avons également passé en revu les différents outils à notre disposition qui peuvent être intégrés lors du build pour obtenir des métriques permettant de donner un retour aux développeur et aussi faire une première configuration de ces outils. Nous avons vu que Jenkins est un solution satisfaisante et rapide à mettre en oeuvre pour construire vos projets .Net.
+
 Il ne vous reste plus maintenant qu'à mettre en oeuvre ces outils sur vos projet pour le bonheur de vos équipes...
